<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
            android:id="@+id/messages_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transcriptMode="alwaysScroll"
            android:divider="@null">
        </com.nhaarman.listviewanimations.itemmanipulation.DynamicListView>
        <LinearLayout
            android:id="@+id/text_form"
            android:visibility="invisible"
            android:background="#007FFF"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text_source_content"
                android:padding="5dp"
                android:lines="3"
                android:gravity="top|left"
                android:background="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/add_text_source"
                android:text="@string/submit_text_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress_frame"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="true"
            app:spbStyle="@null"
            app:spb_sections_count="1"
            app:spb_color="#007FFF"
            app:spb_speed="1.0"
            app:spb_stroke_width="4dp"
            app:spb_stroke_separator_length="10dp"
            app:spb_reversed="false"
            app:spb_mirror_mode="false"
            app:spb_progressiveStart_activated="false"
            />
        <LinearLayout
            android:id="@+id/text_frame"
            android:background="@color/main_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- <EditText
                android:id="@+id/compose_message"
                android:layout_margin="5dp"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:minLines="2"
                android:maxLines="2"
                android:lines="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" /> -->
            <EditText
                android:id="@+id/compose_message"
                android:layout_margin="5dp"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/submit_message"
                    android:src="@android:drawable/ic_menu_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/cancel_message"
                    android:src="@android:drawable/ic_menu_revert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/speech_frame"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ToggleButton
                    android:id="@+id/speech_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout> -->
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <!-- <ImageButton
                    android:padding="5dp"
                    android:background="@null"
                    android:id="@+id/speech_activate"
                    android:src="@android:drawable/ic_btn_speak_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" /> -->
                <com.software.shell.fab.ActionButton
                    xmlns:fab="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/speech_activate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:button_color="#FFFFFF"
                    fab:image="@drawable/ic_mic_black_48dp"
                    fab:shadow_yOffset="0dp"
                    />
            </LinearLayout>
            <!-- <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"></LinearLayout> -->
        </LinearLayout>
    </FrameLayout>
</LinearLayout>