<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_import_picture" android:title="@string/action_import_picture"
        android:icon="@drawable/ic_image_white_24dp" app:showAsAction="always" />
    <item android:id="@+id/action_import_text" android:title="@string/action_import_text"
        android:icon="@drawable/ic_font_download_white_24dp" app:showAsAction="always" />
    <!-- <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" /> -->
</menu>
